# reflebot-backend

./: .env.example  .gitignore  AGENTS.md  API.md  pyproject.toml  run.sh  run_celery_beat.sh  run_celery_worker.sh  run_delivery_result_consumer.sh
.docs/: ARCHITECTURE.md  BUISNESS_LOGIC.md  CODE_REQUIREMENTS.md  FEATURES.md  LOGIC.md  REFLECTIONS_MODELS.md  REFLECTION_PROMPT_DELIVERY.md  STUDENT_BOT_GUIDE.md  STUDENT_TEACHER_USER_STORIES.md  SYSTEM_OVERVIEW.md  TELEGRAM_NEW_2_FEATURES_2026_31_03.md  TESTING.md
migrations/: env.py
reflebot/: bootstrap.py  celery_app.py  main.py  middleware.py  router.py  settings.py
scripts/: build_student_guide_docx.py  create_admin.py  export_student_history_stats.py  reflection_prompt_delivery_smoke.py  run_delivery_result_consumer.py  task25_smoke.py
tests/: __init__.py  test_admin_service.py  test_admin_workflow_and_navigation_properties.py  test_analytics_service.py  test_analytics_service_properties.py  test_analytics_use_cases.py  test_api_routes.py  test_auth_service.py  test_context_service_navigation.py  test_course_excel_parser_properties.py  test_course_invite_service.py  test_course_service.py  test_course_service_properties.py  test_course_use_cases.py  test_default_question_service.py  test_handler_validation_and_errors.py  test_handlers.py  test_identity_repositories.py  test_lection_service.py  test_lection_use_cases.py  test_manage_files_use_case_properties.py  test_nearest_lection_handler_properties.py  test_notification_delivery_integration.py  test_notification_delivery_repository.py  test_question_service.py  (+13 more)
(+86 files in other folders)
