[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.6.2",
    "aiobotocore>=3.3.0",
    "alembic>=1.18.3",
    "celery>=5.6.3",
    "fastapi>=0.128.0",
    "granian[reload]>=2.6.1",
    "openpyxl>=3.1.5",
    "psycopg>=3.3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.46",
    "sqlalchemy-utils>=0.42.1",
    "types-aiobotocore-s3>=3.3.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.151.9",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
